--- a/myconfig.py.sample
+++ b/myconfig.py.sample
@@ -36,7 +36,7 @@ PATH_MASK = "~/donkey_offroad_rl/data/tub_1_20-03-12/*.jpg"
 # 
 # #9865, over rides only if needed, ie. TX2..
 PCA9685_I2C_ADDR = 0x40     #I2C address, use i2cdetect to validate this number
-PCA9685_I2C_BUSNUM = None   #None will auto detect, which is fine on the pi. But other platforms should specify the bus num.
+PCA9685_I2C_BUSNUM = None   #None will auto detect, which is fine on the pi. But other platforms should specify the bus num. use 8 for the jetson. Check whether the bus is activated using `i2cdetect -y -r 8`.
 # 
 # #SSD1306_128_32
 USE_SSD1306_128_32 = False    # Enable the SSD_1306 OLED Display
@@ -294,4 +294,5 @@ AI_THROTTLE_MULT = 0.4              # this multiplier will scale every throttle 
 
 # SENSEORS
 ENABLE_ROTARY_ENCODER = True # True to capture odometer sensor value
+ROTARY_PIN = 31  # pi uses 13 pin, jetson uses 31 pin
 ROTARY_MM_PER_TICK = 5.25 # 5.469907 for HW-040
